Gnash 0.8.11
YYYY/MM/DD

Improvements since 0.8.10 release are:

 * Fix opening of external URL with Gnash Standalone (#31833)

Gnash 0.8.10
2012/02/04

Improvements since 0.8.9 release are:

 * Qt4 GUI supports mouse wheel, clipboard, and screen resolution.
 * Enhanced UI support for script limits (abort popups, user prefs).
 * BitmapData functions copyPixels(), copyChannel(), perlinNoise() and noise() 
   implemented.
 * Node id mapping in ActionScript XML class implemented (XML.idMap).
 * Fix dispatching of Sound.onLoad event, fixing google dict audio.
 * Fix support for control tags found after last expected frame (#33176).
 * Fix support for uncompressed sound with gstreamer media handler.
 * Implement Button.getDepth(), fix button key events.
 * Fixes to startDrag and stopDrag opcodes.
 * Implement onSoundComplete() for event sounds (#23020).
 * Fix MovieClip.onLoad event dispatching and constant pools handling, fixing
   support for movies generated by the evil Adobe Captivate tool (#33521).
 * Fix unattached Sound.stop() semantic (#33888) enjoy Super Mario!
 * OpenVG renderer added.
 * Improved framebuffer GUI and touchscreen support.
 * Framebuffer now supports using multiple renderers.
 * Refactored input device support.
 * Fix parsing of lossless 16bit bitmaps, fixing support for movies
   generated by the evil TechSmit Camtasia tool (#34625).
 * Improved double buffering support for AGG in a framebuffer.
 * Thumbnailer for SWF files and GNOME2 desktop config for it.

Gnash 0.8.9
2011/03/19

Caveats:

 * The minimum required FFmpeg version, for people who prefer it over
   Gstreamer, is now 51.28.0.
 * The configure script option --enable-i810-lod-bias, which provided
   a workaround for a very old driver for the Intel I810 when using the
   OpenGL renderer, has been removed.
 * Gnash now uses the system-installed libltdl rather than its in-tree
   copy.
 * NPAPI headers are now required for building the Mozilla plugin; they