@@ -4,6 +4,7 @@ YYYY/MM/DD
 Improvements since 0.8.10 release are:
 
  * Fix opening of external URL with Gnash Standalone (#31833)
+ * Fix support for GIFLIB-5.0 (#39482)
 
 Gnash 0.8.10
 2012/02/04
